--- a/public/public/index.html
+++ b/public/public/index.html
@@ -235,11 +235,15 @@
     return url ? '<img class="badge" src="'+url+'" alt="'+(alt||'')+'" onerror="this.style.display=\'none\'"/>' : '';
   }
   function statusLabel(fx){
-    const st = (fx.status || '').toUpperCase();
-    if (/LIVE|IN_PLAY|1ST|2ND/.test(st)) return 'LIVE';
-    if (/FINISH|FT|ENDED/.test(st)) return 'FINISHED';
-    return 'SCHEDULED';
-  }
+  const st = (fx.status || '').toUpperCase();
+  // halftime
+  if (/\bHT\b/.test(st) || /HALF/.test(st)) return 'HALF';
+  // live
+  if (/LIVE|IN_PLAY|1ST|2ND/.test(st)) return 'LIVE';
+  // finished (word boundary on FT so HALFTIME doesn't match)
+  if (/STATUS_FINAL|STATUS_POSTGAME|POSTGAME|FINAL|FULL\s?TIME|FULLTIME|ENDED|FINISH(?:ED)?|\bFT\b/.test(st)) return 'FINISHED';
+  return 'SCHEDULED';
+}
   function compName(fx){ return fx.league && (fx.league.name || fx.league.code) || ''; }
 
   function card(fx){
