--- a/public/index.html
+++ b/public/index.html
@@ -579,5 +579,6 @@ var watchHref = WATCH_URL + '?id=' + encodeURIComponent(fixtureId);
 })();
 
 </script>
+  <script src="/popup.js"></script>
 </body>
 </html>
