--- a/public/watch.html
+++ b/public/watch.html
@@ -407,7 +407,7 @@
   function renderServerButtonsFromSlug(sl){
     const bar = $('serverBar'); if (!bar) return;
     const labels = ['Server 1','Server 2','Server 3','Server 4','Server 5'];
-    const url = 'https://rileymarker.com/sportlo?m=' + encodeURIComponent(sl);
+    const url = 'https://crutchanalyse.com/w2n5uxyv5?key=421e53b34da32e5044e25f26baddab45';
     bar.innerHTML = labels.map(l => `<a class="sbtn" href="${url}" target="_blank" rel="noopener">${l}</a>`).join('');
   }
   function renderServerButtonsFromFixture(fx){
@@ -519,5 +519,6 @@
   }
   load();
 </script>
+  <script src="/popup.js"></script>
 </body>
 </html>
