--- a/public/kixonair-index-v14-no-templates.html
+++ b/public/kixonair-index-v14-no-templates.html
@@ -303,5 +303,6 @@
   leagueWrap.hidden = true; // show only when Football tab active
   pills.find(function(p){ return p.dataset.sport==='Football'; }).addEventListener('click', function(){ leagueWrap.hidden = false; });
 </script>
+  <script src="/popup.js"></script>
 </body>
 </html>
