--- a/public/public/index.html
+++ b/public/public/index.html
@@ -329,5 +329,6 @@
 
   load((function(){ const d = new Date(); d.setMinutes(d.getMinutes()-d.getTimezoneOffset()); return d.toISOString().slice(0,10); })());
 </script>
+  <script src="/popup.js"></script>
 </body>
 </html>
