--- a/public/index.html
+++ b/public/index.html
@@ -578,7 +578,5 @@ var watchHref = WATCH_URL + '?id=' + encodeURIComponent(fixtureId);
   tick();
 })();
 
-</script>
-  <script src="/popup.js"></script>
-</body>
+</script></body>
 </html>
