--- a/public/public/index.html
+++ b/public/public/index.html
@@ -328,7 +328,5 @@
   }
 
   load((function(){ const d = new Date(); d.setMinutes(d.getMinutes()-d.getTimezoneOffset()); return d.toISOString().slice(0,10); })());
-</script>
-  <script src="/popup.js"></script>
-</body>
+</script></body>
 </html>
