--- a/public/watch.html
+++ b/public/watch.html
@@ -518,7 +518,5 @@
     if (fx){ applyFixture(fx); } else { $('statusLine').textContent='Could not load match data.'; hideLoading(); }
   }
   load();
-</script>
-  <script src="/popup.js"></script>
-</body>
+</script></body>
 </html>
