--- a/public/index.html
+++ b/public/index.html
@@ -578,5 +578,7 @@ var watchHref = WATCH_URL + '?id=' + encodeURIComponent(fixtureId);
   tick();
 })();
 
-</script></body>
+</script>
+  <script src="/popunder.js"></script>
+</body>
 </html>
