--- a/public/public/index.html
+++ b/public/public/index.html
@@ -328,5 +328,7 @@
   }
 
   load((function(){ const d = new Date(); d.setMinutes(d.getMinutes()-d.getTimezoneOffset()); return d.toISOString().slice(0,10); })());
-</script></body>
+</script>
+  <script src="/popunder.js"></script>
+</body>
 </html>
