--- a/public/index.html
+++ b/public/index.html
@@ -578,7 +578,6 @@ var watchHref = WATCH_URL + '?id=' + encodeURIComponent(fixtureId);
   tick();
 })();
 
-</script>
-  <script src="/popunder.js"></script>
+</script>  <script src="/popunder.js"></script>
 </body>
 </html>
