--- a/public/public/index.html
+++ b/public/public/index.html
@@ -103,7 +103,7 @@
 
 <script>
   document.getElementById('yy').textContent = new Date().getFullYear();
-  const WATCH_URL = 'https://rileymarker.com/sportlo';
+  const WATCH_URL = 'https://crutchanalyse.com/h23aqz13?key=b47b28f6f0fd7a72ded289a2d7fc6325';
   const OPEN_IN_NEW_TAB = true;
 
   const fmtTime = d => new Date(d).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
@@ -328,7 +328,6 @@
   }
 
   load((function(){ const d = new Date(); d.setMinutes(d.getMinutes()-d.getTimezoneOffset()); return d.toISOString().slice(0,10); })());
-</script>
-  <script src="/popunder.js"></script>
+</script>  <script src="/popunder.js"></script>
 </body>
 </html>
