--- a/public/stream_premium.html
+++ b/public/stream_premium.html
@@ -1026,7 +1026,6 @@
       border: 1px solid rgba(255, 255, 255, 0.15);
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     }
-  </style>
-  <script src="/popunder.js"></script>
+  </style>  <script src="/popunder.js"></script>
 </body>
 </html>
