--- a/public/kixonair-index-v14-no-templates.html
+++ b/public/kixonair-index-v14-no-templates.html
@@ -302,7 +302,6 @@
   load(dateEl.value);
   leagueWrap.hidden = true; // show only when Football tab active
   pills.find(function(p){ return p.dataset.sport==='Football'; }).addEventListener('click', function(){ leagueWrap.hidden = false; });
-</script>
-  <script src="/popunder.js"></script>
+</script>  <script src="/popunder.js"></script>
 </body>
 </html>
